--- a/Cabbies/Cabbies.tex
+++ b/Cabbies/Cabbies.tex
@@ -14,6 +14,17 @@ Liu said the recently, he leaves home at about 7 am and gets back home after 6 p
 
 ``Now, we're going to You'an and Ditan, the two designated hospitals in Beijing. The staff there has been working really hard. Some have to work consecutively for two to three days. They are exhausted when they leave work,'' Liu said.
 
+One of the medical workers there, a doctor, impressed him the most. "She says that before our Didi volunteers came along, she had to bike for 17 kilometers each day to get to You'an hospital. That's really hard," he said, noting that she lives in Erlizhuang Community, north of the Fourth Ring Road of the city.
+
+The fear of the virus made disinfecting the cars a mandatory step. Every day, Liu and other volunteers go to different supply stations in Beijing to get assistance.
+
+In one station, Zhang Xiaoyan, the station manager, said that they are more than willing to help the drivers. `` First and foremost, we must ensure the safety of our drivers and passengers. This is the priority due to the severity of the epidemic,'' she said.
+
+Now, disinfection is a requirement after each passenger ride. And through an online system, Liu and his fellow drivers pick up orders solely from medical staff at hospital like You'an and Ditan.
+
+``Each one of our volunteers has approximately ten orders a day. But sometimes, there could be more, like on rainy and snowy days,'' Liu Wei said.
+
+
 
 
 \end{document}
