--- a/parttwo/parttwo.tex
+++ b/parttwo/parttwo.tex
@@ -33,7 +33,7 @@ At the same time, we looked at two groups of nouns that do carry necessary meani
 
 There are also many constructions involving nouns like ``improvement'' and ``modernization'' that we did not discuss in Chapter I because they do not include unnecessary words. Yet those too should be edited out wherever possible, simply because the nouns are abstract.
 
-In this chapter we shall consider abstract nouns as a class and see both why and how to avoid them. 
+In this chapter we shall consider abstract nouns as a class and see both why and how to avoid them.
 
 
 \subsection{Perils of using abstract nouns}
@@ -44,7 +44,7 @@ Prefer the concrete word to the abstract. Follow that advice and you will see yo
 
 In the same way, Ernest Gowers, addressing British civil servants, singles out the preference for the abstract word as ``the greatest vice of present-day writing.'' He warns in particular the ``an excessive reliance on the noun at the expense of the verb will ... insensibly induce a habit of abstraction, generalisation and vagueness.''
 
-The authors of books on writing often use metaphors comparing the use of abstract noun to infection. Fowler calls it ``disease'' of ``abstractitis.'' William Zinsser speaks of ``dead'' sentences and the blight of ``creeping nounism''. And Wilson Follet, whose \emph{Modern American Usage} is as much a classic as Fowler's \emph{Dictionary of Modern English Usage}, urges writers 
+The authors of books on writing often use metaphors comparing the use of abstract noun to infection. Fowler calls it ``disease'' of ``abstractitis.'' William Zinsser speaks of ``dead'' sentences and the blight of ``creeping nounism''. And Wilson Follet, whose \emph{Modern American Usage} is as much a classic as Fowler's \emph{Dictionary of Modern English Usage}, urges writers
 to ``avoid abstract nouns like the plague.''
 
 \subsubsection{Sentences based on abstract nouns}
@@ -59,8 +59,17 @@ The first version contain four abstract nouns, while the successive has none. No
 
 Chinglish abounds in sentences that rely chiefly on nouns to express their meaning. Here are three examples taken from draft translations:
 
- 
+\begin{itemize}
+  \item A curtailment of both city and town population as well as streamlining of administrative personnel for an enhancement of work efficiency constitutes a important aspect in our tasks of adjustment.
+  \item With stability of currency and prices achieved, there had to be proved communications throughout the country, in accordance with the new conditions and demands, so that they could serve the restoration of production.
+  \item The basic requirements of the struggle against Right-leaning conservatism are the further development and consolidation of the people's dictatorship in our country, the early accomplishment of socialist transformation, the overfulfillment of the state plan for industrial development, and the rapid progress of the technical transformation of the national economy.
+\end{itemize}
 
+The preference for abstract language is not of course, unique to Chinglish. If the advice-givers make such a point of condemning it, that is precisely because it pervades so much of the writing of native speaker of English.
+
+Abstract nouns are the common coin of academic institutions, government bureaucracies, the military establishment, large corporations, and so on (groups for which obscurity if often advantage). Abstract nouns are also favored by man ordinary citizens, when they wish to sound authoritative or scientific.
+
+Following are three more examples, this time from the English produced by native speakers, of what has been termed "the noun style." Like the Chinglish sentences cited above, they illustrate what Gowers calls "the habit of using abstract words to say in a complicated way something that might be said simply and directly."
 
 
 
